--- a/notebooks/deliver/2021-03-03-gc-profile-benchmarking.ipynb
+++ b/notebooks/deliver/2021-03-03-gc-profile-benchmarking.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "acquired-weapon",
+   "id": "cognitive-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,9 @@
     "\n",
     "from notebooks import pipes\n",
     "from notebooks.profiles import EuclideanProfile\n",
+    "from notebooks import benchmarking as bench\n",
     "from notebooks.feature_extractors import HeuristicsExtractor\n",
-    "from notebooks.thresholders import SimpleAccuracyThresholder\n",
+    "from notebooks.thresholders import SimpleAccuracyThresholder, SimpleThresholder\n",
     "\n",
     "init_data_dir(project_root)\n",
     "\n",
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "awful-maple",
+   "id": "assumed-peninsula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +49,14 @@
     "\n",
     "profiles = [(EuclideanProfile(), \"euclidean_distance_profile\")]\n",
     "\n",
-    "thresholders = [(SimpleAccuracyThresholder(), \"accuracy_thresholder\")]"
+    "thresholders = [(SimpleAccuracyThresholder(), \"accuracy_thresholder\"),\n",
+    "                (SimpleThresholder(bench.balanced_accuracies), \"balanced_accuracy_thresholder\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "detailed-kruger",
+   "id": "rough-collection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,21 +86,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "historical-dairy",
+   "execution_count": 8,
+   "id": "economic-cornwall",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'author'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.9/site-packages/IPython/core/interactiveshell.py\u001b[0m, in \u001b[0;32mrun_code\u001b[0m:\nLine \u001b[0;34m3437\u001b[0m:  exec(code_obj, \u001b[36mself\u001b[39;49;00m.user_global_ns, \u001b[36mself\u001b[39;49;00m.user_ns)\n",
-      "In  \u001b[0;34m[6]\u001b[0m:\nLine \u001b[0;34m1\u001b[0m:     preprocessed_dfs[\u001b[34m0\u001b[39;49;00m][\u001b[34m0\u001b[39;49;00m][\u001b[33m\"\u001b[39;49;00m\u001b[33mauthor\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m]\n",
-      "File \u001b[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m, in \u001b[0;32m__getitem__\u001b[0m:\nLine \u001b[0;34m3024\u001b[0m:  indexer = \u001b[36mself\u001b[39;49;00m.columns.get_loc(key)\n",
-      "File \u001b[0;34m/home/gchristensen/anaconda3/envs/avpd/lib/python3.9/site-packages/pandas/core/indexes/base.py\u001b[0m, in \u001b[0;32mget_loc\u001b[0m:\nLine \u001b[0;34m3082\u001b[0m:  \u001b[34mraise\u001b[39;49;00m \u001b[36mKeyError\u001b[39;49;00m(key) \u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36merr\u001b[39;49;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'author'\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 527/527 [02:51<00:00,  3.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 521/521 [02:52<00:00,  3.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 527/527 [02:52<00:00,  3.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 521/521 [02:52<00:00,  3.03it/s]\n"
      ]
     }
    ],
@@ -118,8 +163,8 @@
     "\n",
     "        true_flags = distances.index.get_level_values(0) != author\n",
     "\n",
-    "        distance_sets.append(distances[0].to_numpy())\n",
-    "        true_flag_sets.append(true_flags.to_numpy())\n",
+    "        distance_sets.append(distances.to_numpy())\n",
+    "        true_flag_sets.append(true_flags)\n",
     "\n",
     "    distances = np.concatenate(distance_sets)\n",
     "    true_flags = np.concatenate(true_flag_sets)\n",
@@ -140,14 +185,16 @@
     "        profile.feed(author_texts)\n",
     "        distances = profile.distances(rest_df)\n",
     "\n",
-    "        flags = distances[0] > threshold\n",
+    "        flags = distances > threshold\n",
     "        true_flags = distances.index.get_level_values(0) != author\n",
     "\n",
     "        flag_sets.append(flags.to_numpy())\n",
-    "        true_flag_sets.append(true_flags.to_numpy())\n",
+    "        true_flag_sets.append(true_flags)\n",
     "\n",
     "    flags = np.concatenate(flag_sets)\n",
     "    true_flags = np.concatenate(true_flag_sets)\n",
+    "\n",
+    "    return [bench.balanced_accuracy(flags, true_flags)]\n",
     "\n",
     "\n",
     "score_data = []\n",
@@ -161,13 +208,73 @@
     "\n",
     "            scores = test_profile(profile, threshold, preprocessed_valid_df)\n",
     "            score_data.append(scores)\n",
-    "            model_names.append(f\"{profile_name}-{thresholder_name}-{extractor_name}\")"
+    "            model_names.append(f\"{profile_name}-{thresholder_name}-{extractor_name}\")\n",
+    "\n",
+    "results_df = pd.DataFrame(score_data, index=model_names, columns=[\"balanced_accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "discrete-catalog",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>balanced_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>euclidean_distance_profile-accuracy_thresholder-heuristics_extractor</th>\n",
+       "      <td>[0.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>euclidean_distance_profile-balanced_accuracy_thresholder-heuristics_extractor</th>\n",
+       "      <td>[0.46530385923406775]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                        balanced_accuracy\n",
+       "euclidean_distance_profile-accuracy_thresholder...                  [0.5]\n",
+       "euclidean_distance_profile-balanced_accuracy_th...  [0.46530385923406775]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "suspected-amendment",
+   "id": "permanent-poker",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "korean-importance",
+   "id": "rotary-nicholas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "regulated-volleyball",
+   "id": "sharing-analysis",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bulgarian-doctrine",
+   "id": "beginning-making",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "flexible-large",
+   "id": "faced-digest",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "traditional-accordance",
+   "id": "better-antigua",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "wrapped-corner",
+   "id": "floppy-luxury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fuzzy-religion",
+   "id": "affiliated-iceland",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "amended-calgary",
+   "id": "comprehensive-agenda",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "breeding-principle",
+   "id": "fatal-graduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "interested-charm",
+   "id": "integrated-round",
    "metadata": {
     "collapsed": false,
     "jupyter": {
