--- a/notebooks/deliver/2021-03-03-gc-profile-benchmarking.ipynb
+++ b/notebooks/deliver/2021-03-03-gc-profile-benchmarking.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "contemporary-tattoo",
+   "id": "special-cowboy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "billion-better",
+   "id": "latest-utility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,37 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "rural-pencil",
+   "id": "hindu-ceiling",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing train dataset for pos2gram_counter\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 238088/238088 [24:22<00:00, 162.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing valid dataset for pos2gram_counter\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 58833/58833 [06:35<00:00, 148.57it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -71,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 147807/147807 [00:23<00:00, 6213.03it/s]\n"
+      "100%|##########| 238088/238088 [00:46<00:00, 5104.86it/s]\n"
      ]
     },
     {
@@ -85,7 +113,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 149114/149114 [00:23<00:00, 6259.57it/s]\n"
+      "100%|##########| 58833/58833 [00:11<00:00, 5170.17it/s]\n"
      ]
     }
    ],
@@ -117,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "little-wellington",
+   "id": "exotic-dividend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "young-chosen",
+   "id": "removed-external",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "comic-cherry",
+   "id": "muslim-ticket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "several-jacksonville",
+   "id": "behavioral-chocolate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "literary-methodology",
+   "id": "afraid-blame",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "local-lightning",
+   "id": "golden-blowing",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "composite-spyware",
+   "id": "wooden-assurance",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "sonic-bennett",
+   "id": "scheduled-hormone",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "brief-crime",
+   "id": "unlikely-morris",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "dense-luther",
+   "id": "concerned-means",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "anticipated-savage",
+   "id": "digital-folder",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "norwegian-reform",
+   "id": "instructional-darwin",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "conscious-madrid",
+   "id": "informative-vessel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cathedral-angola",
+   "id": "brown-calcium",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "located-attitude",
+   "id": "secondary-color",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "missing-preliminary",
+   "id": "responsible-reader",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "accepted-tucson",
+   "id": "known-findings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "reliable-password",
+   "id": "macro-small",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "urban-cornwall",
+   "id": "dominant-electronics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "leading-tunisia",
+   "id": "composite-setting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extraordinary-retail",
+   "id": "superior-shelter",
    "metadata": {},
    "source": [
     "The threshold may be overfitting to individual author texts, not the dataset"
@@ -1011,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "numerous-collar",
+   "id": "marine-solid",
    "metadata": {},
    "outputs": [],
    "source": [
