Add test essays

--- a/notebooks/deliver/bawe_data_information.ipynb
+++ b/notebooks/deliver/bawe_data_information.ipynb
@@ -1244,9 +1244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:avpd]",
+   "display_name": "Python 3.9 (XPython)",
    "language": "python",
-   "name": "conda-env-avpd-xpython"
+   "name": "xpython"
   },
   "language_info": {
    "file_extension": ".py",
