--- a/notebooks/deliver/bawe_profile_tests.ipynb
+++ b/notebooks/deliver/bawe_profile_tests.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "stuffed-borough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "smart-cause",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +33,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ahead-adrian",
    "metadata": {},
    "source": [
     "# Progress Report 1\n",
@@ -73,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "tropical-partner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +144,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "exterior-peoples",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "golden-jacksonville",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +202,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "compound-offering",
    "metadata": {},
    "outputs": [
     {
@@ -277,15 +270,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:avpd]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-avpd-xpython"
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
