--- a/notebooks/develop/2021-02-08-gc-bawe-par_encoder.ipynb
+++ b/notebooks/develop/2021-02-08-gc-bawe-par_encoder.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "operational-consensus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "quick-royalty",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "asian-paint",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -51,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "considered-purse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "copyrighted-valuable",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -84,7 +79,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gothic-skirt",
    "metadata": {},
    "source": [
     "Validation split"
@@ -93,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "standard-plate",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -118,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "finished-daily",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -144,7 +136,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "satellite-distinction",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -161,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "composed-realtor",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -223,7 +213,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "choice-kingdom",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -266,7 +255,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "arabic-prague",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -359,7 +347,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "alone-grace",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -380,7 +367,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "particular-speech",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +391,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "skilled-house",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -433,7 +418,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affecting-remedy",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -514,7 +498,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olympic-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +509,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bibliographic-hybrid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +518,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collect-electron",
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -550,7 +531,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "welsh-elephant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,15 +540,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:avpd]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-avpd-xpython"
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.7.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
