Integrate PCA/LDA model

--- a/notebooks/develop/2021-01-31-gc-gutenberg-sentence-grouping.ipynb
+++ b/notebooks/develop/2021-01-31-gc-gutenberg-sentence-grouping.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -15,24 +18,38 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "gut_df = pd.read_hdf('../data/gutenberg-sentences/train-no-shuffle.hdf5')"
-   ],
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "gut_df = pd.read_hdf('../data/gutenberg-sentences/train-no-shuffle.hdf5')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7ff369eeed90>"
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7ff369eeed90>"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -41,22 +58,123 @@
    ],
    "source": [
     "gut_df.groupby('id')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "       id                                           sentence\n0       7  ﻿The Project Gutenberg EBook of Pollony Undive...\n1       7  This eBook is for the use of anyone anywhere a...\n2       7  You may copy it, give it away or\\nre-use it un...\n3       7  included\\nwith this eBook or online at www.gut...\n4       7                                             Title:\n...    ..                                                ...\n36671  19  Project Gutenberg-tm eBooks are often created ...\n36672  19  Thus, we do not necessarily\\nkeep eBooks in co...\n36673  19  Most people start at our Web site which has th...\n36674  19  This Web site includes information about Proje...\n36675  19  Archive Foundation, how to help produce our ne...\n\n[64795 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>sentence</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7</td>\n      <td>﻿The Project Gutenberg EBook of Pollony Undive...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>7</td>\n      <td>This eBook is for the use of anyone anywhere a...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>7</td>\n      <td>You may copy it, give it away or\\nre-use it un...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>7</td>\n      <td>included\\nwith this eBook or online at www.gut...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7</td>\n      <td>Title:</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>36671</th>\n      <td>19</td>\n      <td>Project Gutenberg-tm eBooks are often created ...</td>\n    </tr>\n    <tr>\n      <th>36672</th>\n      <td>19</td>\n      <td>Thus, we do not necessarily\\nkeep eBooks in co...</td>\n    </tr>\n    <tr>\n      <th>36673</th>\n      <td>19</td>\n      <td>Most people start at our Web site which has th...</td>\n    </tr>\n    <tr>\n      <th>36674</th>\n      <td>19</td>\n      <td>This Web site includes information about Proje...</td>\n    </tr>\n    <tr>\n      <th>36675</th>\n      <td>19</td>\n      <td>Archive Foundation, how to help produce our ne...</td>\n    </tr>\n  </tbody>\n</table>\n<p>64795 rows × 2 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sentence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>﻿The Project Gutenberg EBook of Pollony Undive...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>This eBook is for the use of anyone anywhere a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>You may copy it, give it away or\\nre-use it un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>included\\nwith this eBook or online at www.gut...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Title:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36671</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Project Gutenberg-tm eBooks are often created ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36672</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Thus, we do not necessarily\\nkeep eBooks in co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36673</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Most people start at our Web site which has th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36674</th>\n",
+       "      <td>19</td>\n",
+       "      <td>This Web site includes information about Proje...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36675</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Archive Foundation, how to help produce our ne...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>64795 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id                                           sentence\n",
+       "0       7  ﻿The Project Gutenberg EBook of Pollony Undive...\n",
+       "1       7  This eBook is for the use of anyone anywhere a...\n",
+       "2       7  You may copy it, give it away or\\nre-use it un...\n",
+       "3       7  included\\nwith this eBook or online at www.gut...\n",
+       "4       7                                             Title:\n",
+       "...    ..                                                ...\n",
+       "36671  19  Project Gutenberg-tm eBooks are often created ...\n",
+       "36672  19  Thus, we do not necessarily\\nkeep eBooks in co...\n",
+       "36673  19  Most people start at our Web site which has th...\n",
+       "36674  19  This Web site includes information about Proje...\n",
+       "36675  19  Archive Foundation, how to help produce our ne...\n",
+       "\n",
+       "[64795 rows x 2 columns]"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -65,17 +183,20 @@
    ],
    "source": [
     "gut_df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "count = 0\n",
@@ -94,13 +215,7 @@
     "        count += 1\n",
     "\n",
     "par_gut_df = pd.DataFrame({'id': ids, 'paragraph': paragraphs})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -112,16 +227,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
