--- a/notebooks/deliver/bawe_data_extraction.ipynb
+++ b/notebooks/deliver/bawe_data_extraction.ipynb
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|##########| 2577/2577 [00:00<00:00, 6550.34it/s]\n"
+      "100%|██████████| 2577/2577 [00:00<00:00, 24873.94it/s]\n"
      ]
     },
     {
@@ -295,15 +295,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:avpd]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-avpd-xpython"
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
